--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -7,6 +7,8 @@ on early-init
    # Needed by NxServer
    mkdir /tmp 0775 root system
 
+   mkdir /mnt/media_rw/sdcard 0700 media_rw media_rw
+
    mkdir /storage/emulated/ 0555 root root
    mkdir /storage/sdcard 0700 root root
    mkdir /storage/usbdisk0 0700 root root
@@ -18,8 +20,6 @@ on early-init
    symlink /storage/usbdisk0 /mnt/usbdisk0
 
    export EXTERNAL_STORAGE /storage/sdcard
-   export EMULATED_STORAGE_SOURCE /storage/sdcard
-   export EMULATED_STORAGE_TARGET /storage/sdcard
 
 on fs
    mount_all /fstab.bcm_platform
@@ -43,6 +43,10 @@ on post-fs-data
 
 on property:hw.nexus.platforminit=on
    class_start main
+
+# When boot has completed we can start any relevant services
+on property:sys.boot_completed=1
+    class_start boot_complete
 
 service fuse_sdcard /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/sdcard /storage/sdcard
    class late_start
