--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -7,6 +7,7 @@ on early-init
    # Needed by NxServer
    mkdir /tmp 0775 root system
 
+on init
    mkdir /mnt/media_rw/sdcard 0700 media_rw media_rw
 
    mkdir /storage/emulated/ 0555 root root
