Android: 43570a0 WiFi PCIe chip support Need to build wpa_supplicant manually. Use android_dhd_rel_1_201_9_fw_7_35_63 driver. Tools wl and dhd will be built. bcmdl build is currently disabled. refs #SWANDROID-922
Change-Id: I1f3f0550b26aeccca058cee3bdb6e4e3977df68e

--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -2,6 +2,7 @@
 import /init.brcm_dhd.rc
 import /init.brcm_wl.rc
 import /init.brcm_bt.rc
+import /init.brcm_pfd.rc
 
 on early-init
    # Needed by NxServer
