L: bluetooth USB changes from L-PDK refs #SWANDROID-922
Change-Id: Ib94f0687387e44da14e5d581e12f44d03529ca48

--- a/bcm_platform/prebuilt/ueventd.bcm_platform.rc
+++ b/bcm_platform/prebuilt/ueventd.bcm_platform.rc
@@ -7,3 +7,10 @@
 # huh??
 /dev/mem                  0770   root       root
 
+# BT USB device nodes
+subsystem usbmisc
+	devname uevent_devname
+/dev/hiddev0              0777   bluetooth  bluetooth
+/dev/hiddev1              0777   bluetooth  bluetooth
+/dev/btusb0               0777   bluetooth  bluetooth
+		
