L: bring up wlan0 on boot refs #SWANDROID-922
Change-Id: I150406c6d005b42835ed9a19360444d292d143fb

--- a/bcm_platform/brcm_dhd/init.brcm_pfd.rc
+++ b/bcm_platform/brcm_dhd/init.brcm_pfd.rc
@@ -93,3 +93,7 @@ service dhd_fwload /system/bin/dhd -i wlan0 download /system/vendor/broadcom/dhd
     class core
     oneshot
 
+service dhd_wlan0_up /system/bin/ifconfig wlan0 up
+    class core
+    oneshot
+
