init: move nexus_ipc_dir
Prevent nexus_ipc_dir from being created
in root partition, which breaks the boot
when set to read-only.

refs #SWANDROID-1042

Change-Id: I96d27c6bb70104da29946a572e1056dc9ee08be6

--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -28,6 +28,9 @@ on fs
    setprop chrome.tv.hole_threshold 0
 
 on post-fs
+   # Prevent Nexus file from being created in /tmp by default
+   export nexus_ipc_dir /dev
+
    # NFS/USB boot - need to remount (again) in RW the rootfs.
    mount rootfs rootfs / rw remount
 
