--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -31,6 +31,9 @@ on post-fs
    # Prevent Nexus file from being created in /tmp by default
    export nexus_ipc_dir /dev
 
+   # Eliminate writable file in /sys to pass android.permission CTS
+   chmod 0664 /sys/kernel/wakeup_reasons/last_resume_reason
+
    # NFS/USB boot - need to remount (again) in RW the rootfs.
    mount rootfs rootfs / rw remount
 
