--- a/bcm_platform/prebuilt/ueventd.bcm_platform.rc
+++ b/bcm_platform/prebuilt/ueventd.bcm_platform.rc
@@ -14,4 +14,5 @@
 
 # nexus in disguise...
 /dev/mali                 0666   root       root
-		
+/dev/mali0                0666   root       root
+
