device: assign the nexus/nexus-wake devname, use it.
continuation of the obfuscation strategy to pass cts, now
that nodes are dynamically created, make sure we pass in
the name we want.

refs #SWANDROID-1023

Change-Id: I3487ee2efd1e0352946b0893122674e8d9fa430a
Signed-off-by: Pierre Couillaud <pierre@broadcom.com>

--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -31,6 +31,8 @@ on fs
    mount_all /fstab.bcm_platform
    setprop ro.crypto.fuse_sdcard true
    setprop chrome.tv.hole_threshold 0
+   setprop ro.nexus.devname mali
+   setprop ro.nexus.wake.devname mali0
 
 on boot
    # Subsytem Ramdump collection
