--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -49,6 +49,7 @@ on post-fs
 on post-fs-data
    mkdir /data/media 0770 media_rw media_rw
    mkdir /data/misc/moca 0777 system system
+   mkdir /data/nexus 0775 root system
 
    chown system system /sys/class/android_usb/android0/f_mass_storage/lun/file
    chmod 0660 /sys/class/android_usb/android0/f_mass_storage/lun/file
