--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -38,6 +38,8 @@ on boot
    # Subsytem Ramdump collection
    mkdir /data/tombstones 0777 system system
    mkdir /data/tombstones/ramdump 0777 system system
+   # gphy depends on eth0 being up
+   ifup eth0
 
 on post-fs
    # Prevent Nexus file from being created in /tmp by default
