--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -33,6 +33,7 @@ on fs
    setprop chrome.tv.hole_threshold 0
    setprop ro.nexus.devname mali
    setprop ro.nexus.wake.devname mali0
+   setprop ro.nexus.ashmem.devname ion
 
 on boot
    # Subsytem Ramdump collection
