--- a/bcm_platform/prebuilt/ueventd.bcm_platform.rc
+++ b/bcm_platform/prebuilt/ueventd.bcm_platform.rc
@@ -1,6 +1,3 @@
-# nx_ashmem driver needs to have the same permissions as ashmem
-/dev/nx_ashmem            0666   root       root
-
 # access for camera.
 /dev/video0               0660   root       root
 
@@ -15,4 +12,5 @@
 # nexus in disguise...
 /dev/mali                 0666   root       root
 /dev/mali0                0666   root       root
+/dev/ion                  0666   root       root
 
