BT: Defer loading of btusb module until file system is ready
Also remove extraneous commands.

refs #SWANDROID-1134

Change-Id: I63bbc10760f216a0db9fbcca4ab5fbc272571dc2
Signed-off-by: Edwin Chan <echan@broadcom.com>

--- a/bcm_platform/brcm_btusb/init.brcm_bt.rc
+++ b/bcm_platform/brcm_btusb/init.brcm_bt.rc
@@ -1,8 +1,5 @@
 
-on init
+on post-fs
 
 # Load the BT USB driver
-    chown root root /system/vendor/broadcom/btusb/driver/btusb.ko
-    chmod 0744 /system/vendor/broadcom/btusb/driver/btusb.ko
     insmod /system/vendor/broadcom/btusb/driver/btusb.ko
-    chmod 0666 /dev/btusb0
