hdcp: cleanup environment variable setup.
environemnt variable are instantiated in the init.xxx.rc
modules in android, so let's do that here as well.

refs #SWANDROID-1032

Change-Id: Ic992d628ba53076bbd36464a7918784a5117c7be
Signed-off-by: Pierre Couillaud <pierre@broadcom.com>

--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -42,6 +42,8 @@ on post-fs
    # Prevent Nexus file from being created in /tmp by default
    export nexus_ipc_dir /dev
 
+   export SAGEBIN_PATH /system/bin
+
    # Eliminate writable file in /sys to pass android.permission CTS
    chmod 0664 /sys/kernel/wakeup_reasons/last_resume_reason
 
