--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -35,6 +35,8 @@ on boot
    # Subsytem Ramdump collection
    mkdir /data/tombstones 0777 system system
    mkdir /data/tombstones/ramdump 0777 system system
+   restorecon_recursive /data/tombstones
+
    # gphy depends on eth0 being up
    ifup eth0
 
