init: hide the nexus ipc socket under a device exception.
last but not least of the cammouflage of the nexus support
for CTS compliance, make the ipc unix socket under a node
that is already part of the exception list.

refs #SWANDROID-1180

Change-Id: I3d4e9b75eb08398baceedc3d91d6ea33d4c8405e
Signed-off-by: Pierre Couillaud <pierre@broadcom.com>

--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -41,8 +41,8 @@ on boot
    ifup eth0
 
 on post-fs
-   # Prevent Nexus file from being created in /tmp by default
-   export nexus_ipc_dir /dev
+   # nexus ipc socket, use a device from the exception list.
+   export nxclient_ipc_node /dev/ump
 
    export SAGEBIN_PATH /system/bin
 
