init: keep ipc nx socket backward compatible.
refs #SWANDROID-1180

Change-Id: I777534c75720158eb2d3c713312652f134c65beb
Signed-off-by: Pierre Couillaud <pierre@broadcom.com>

--- a/bcm_platform/prebuilt/init.broadcomstb.rc
+++ b/bcm_platform/prebuilt/init.broadcomstb.rc
@@ -43,6 +43,8 @@ on boot
 on post-fs
    # nexus ipc socket, use a device from the exception list.
    export nxclient_ipc_node /dev/ump
+   # TODO: remove this.  keeping it for backward compatibility.
+   export nexus_ipc_dir /dev
 
    export SAGEBIN_PATH /system/bin
 
