camera: setup the permissions for the camera node.
refs #SWANDROID-1178

Change-Id: I2afcaa14ce051e97d9be00223e2b2f71968926c3
Signed-off-by: Pierre Couillaud <pierre@broadcom.com>

--- a/bcm_platform/prebuilt/ueventd.bcm_platform.rc
+++ b/bcm_platform/prebuilt/ueventd.bcm_platform.rc
@@ -1,5 +1,5 @@
 # access for camera.
-/dev/video0               0660   root       root
+/dev/video0               0660   system     camera
 
 # huh??
 /dev/mem                  0770   root       root
